<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView -->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_width="match_parent">-->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/linear"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:id="@+id/content_container_frame">

            <com.google.android.exoplayer2.ui.PlayerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000"
                android:layout_alignParentTop="true"
                android:id="@+id/simpleExoPlayerView">
            </com.google.android.exoplayer2.ui.PlayerView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/empty_img_view"/>

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/content_container_frame"
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:hint="hello"
            android:id="@+id/textView2"/>

        <!--Buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/childLinearLayout"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/backbtn"
                android:background="@drawable/list_item_selector"
                android:text="@string/BACK_BTN_TEXT"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/nextbtn"
                android:background="@drawable/list_item_selector"
                android:text="@string/NEXT_BTN_TEXT"/>

        </LinearLayout>

    </RelativeLayout>

<!--</ScrollView>-->


