<?xml version="1.0" encoding="utf-8"?>

<androidx.recyclerview.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/masterListRecyclerView"
    xmlns:tools="http://schemas.android.com/tools"
    tools:listitem = "@layout/main_recipe_list_item"/>


