<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/mainRecipeRV">

   </androidx.recyclerview.widget.RecyclerView>

   <ImageView
       android:layout_width="300dp"
       android:layout_height="200dp"
       android:id="@+id/empty_img_view"
       android:layout_centerInParent="true"
       android:src="@drawable/no_internet_cloud"
       android:visibility="gone"/>

   <TextView
       android:id="@+id/empty_view"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/empty_img_view"
       android:layout_centerInParent="true"
       android:visibility="gone"
       android:text="@string/no_internet_error" />

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/empty_view"
       android:layout_centerInParent="true"
       android:id="@+id/retryBtn"
       android:visibility="gone"
       android:onClick="retyconnection"
       android:text="@string/retry"/>

</RelativeLayout>